--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -114,12 +114,11 @@
               %h3 Latest Tweet:
               = @status.html_safe
               = link_to 'Follow us on Twitter', 'https://twitter.com/@chefsteps', class: 'btn btn-primary'
-      .span4
+      .span4.signup-box
         .well
           %h3 Join The Community!
-          %ul
           = form_tag sign_up_url, :method => :get do
-            %p= email_field_tag 'email', nil, {class: 'input-block-level', placeholder: 'Enter email', required: true}
+            %p= email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Enter email', required: true}
             %p= submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large btn-block', id: 'subscribe-email'
 
 = content_for :footer do
