mobile nav tweaks

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -877,6 +877,9 @@ h1, h2, h3, h4
     width: 228px
     height: 246px
 
+  .nav-item-border
+    display: none
+
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px)
   #hero-container
@@ -920,6 +923,9 @@ h1, h2, h3, h4
 
   .vertical-slider-2
     width: 100%
+
+  .nav-item-border
+    display: none
  
 /* Landscape phones and down */
 @media (max-width: 480px)
@@ -938,3 +944,6 @@ h1, h2, h3, h4
 
   .btn-play-image
     margin: 13px 10px 13px 25px
+
+  .nav-item-border
+    display: none
