--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,7 +8,7 @@
         /   .logo-block
         /     .logo-text ChefSteps
         /     .logo-subtext cook connected
-      %button.btn.btn-navbar{data: {toggle: 'collapse', target: '.nav-collapse'}}
+      %button.btn.btn-navbar{style: 'float: right', data: {toggle: 'collapse', target: '.nav-collapse'}}
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
