--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -14,16 +14,25 @@
           #{apply_shortcodes(activity.description)}
     - if activity.ingredients.any?
       .activity-ingredients-list#full-ingredients-list.section{data: {target: ''}}
-        = render 'ingredients_list', ingredients: activity.ingredients
+        .well
+          = render 'ingredients_list', ingredients: activity.ingredients
+    - if activity.yield.present?
+      .section
+        %h4 Yield
+        %span{:itemprop => "recipeYield"}= activity.yield
+    - if activity.timing.present?
+      .section
+        %h4 Timing
+        = activity.timing
     - if activity.required_equipment.any?
       .section
         %h4 Equipment and Materials
         = render 'equipment_list', equipment: activity.required_equipment
-    - if activity.used_in_activities.any?
+    - if activity.used_in_activities.published.any?
       .section
         %h4 Used In
         %ul
-        - activity.used_in_activities.each do |activity|
+        - activity.used_in_activities.published.each do |activity|
           %li= link_to activity.title.html_safe, activity
   .span6.section.scroll-shadow-wrapper
     .ordered-steps.scroll-shadow
