add print button

--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -2,10 +2,11 @@
   .span6.section#video-ingredient-unit
     .video-container{:itemscope => true, :itemprop => "video", :itemtype => "http://schema.org/VideoObject"}
       - if activity.youtube_id?
-        - if params[:autoplay]
-          %iframe{src: youtube_url(activity.youtube_id, 1)}
-        - else
-          %iframe{src: youtube_url(activity.youtube_id)}
+        .noprint
+          - if params[:autoplay]
+            %iframe{src: youtube_url(activity.youtube_id, 1)}
+          - else
+            %iframe{src: youtube_url(activity.youtube_id)}
       - elsif activity.image_id?
         = image_tag s3_image_url(activity.image_id)
     - if activity.description?
