add collapse more button

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -240,6 +240,13 @@ h1, h2, h3, h4
       &:hover
         cursor: pointer
 
+.activity-description
+  height: 40px
+  overflow: hidden
+
+.maximize-description
+  height: inherit
+
 .ordered-steps
   overflow: auto
   -webkit-overflow-scrolling: touch
