--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -9,9 +9,11 @@
       - elsif activity.image_id?
         = image_tag s3_image_url(activity.image_id)
     - if activity.description?
-      .section
+      .section.activity-description
         :markdown
           #{apply_shortcodes(activity.description)}
+      .pull-right
+        = link_to 'more', 'javascript:void(0);', id: 'activity-description-maximize'
     - if activity.ingredients.any?
       .activity-ingredients-list#full-ingredients-list.section{data: {target: ''}}
         .well
