--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -247,6 +247,9 @@ h1, h2, h3, h4
 .maximize-description
   height: inherit
 
+#activity-description-maximize
+  display: none
+
 .ordered-steps
   overflow: auto
   -webkit-overflow-scrolling: touch
