--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -11,7 +11,7 @@
         = image_tag s3_image_url(activity.image_id)
     - if activity.description?
       .section
-        .activity-description
+        .activity-description#activity-description
           :markdown
             #{apply_shortcodes(activity.description)}
         .text-right
