--- a/app/views/sciences/show.html.haml
+++ b/app/views/sciences/show.html.haml
@@ -40,5 +40,5 @@
                   .step-ingredients
                     = render 'ingredients_list', ingredients: step.ingredients
               .step-image
-                = image_tag s3_image_url(step.image_id) if step.image_id?
+                = image_tag filepicker_step_image(step.image_id) if step.image_id?
               / = link_to '?', '#', class: 'btn btn-warning btn-mini pull-right'
