--- a/app/views/shared/_media_hero.html.haml
+++ b/app/views/shared/_media_hero.html.haml
@@ -1,6 +1,6 @@
 .media-hero
   = link_to media_object do
-    = image_tag s3_image_url(media_object.featured_image)
+    = image_tag filepicker_hero_image(media_object.featured_image)
   / .media-header-background
   / .container
   /   .media-block
