Make a basic drag + drop sort interface.

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -33,6 +33,12 @@
 $redLight:      #e63742
 @import admin/quiz
 @import admin/image_uploader
+@import admin/order_sort_question
+
+.clearfix:after
+  content: ""
+  display: table
+  clear: both
 
 body.admin_namespace
   .img-polaroid
