--- a/app/views/admin/order_sort_questions/_edit.html.haml
+++ b/app/views/admin/order_sort_questions/_edit.html.haml
@@ -3,6 +3,7 @@
 :javascript
   window.ChefStepsAdmin = window.ChefStepsAdmin || {};
   window.ChefStepsAdmin.questionImageData = JSON.parse('#{j(@question_images)}');
+  window.ChefStepsAdmin.solutionData = JSON.parse("#{j(@solutions)}");
 
 %h2 Order Sort Question for "#{@question.quiz.title}"
 
@@ -10,7 +11,12 @@
   = f.inputs name: "Question Details" do
     = f.input :question, input_html: { value: @question.question }
     = f.input :instructions, input_html: { value: @question.instructions }
-    = f.input :solutions, input_html: { value: solution_image_ids(@question) }, hint: 'The format is <solution 1>|<solution 2>|<solution n> (pipe-separated), where a solution is a comma separated list of image IDs, in order. Example: "4,5,6|4,6,5". This is a placeholder UI until we get a real solution creator in place.'
+
+  %h2 Solutions
+  %p
+    You can re-order each solution item by drag-and-drop.
+
+  #solutions-list.clearfix
 
   = f.actions do
     = f.action :submit, label: 'Save Question'
@@ -20,4 +26,4 @@
     .image.image-placeholder{ data: {behavior: 'filepicker'}}
       %p.img-polaroid
         %i.icon-plus
-        %span Upload Images
+          %span Upload Images
