--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -285,7 +285,13 @@ body.admin_namespace
         text-decoration: none
 
 
-
+.filepicker-group
+  .filepicker-preview
+    margin-bottom: 5px
+  .fpsubgroup
+    margin-left: 20%
+    button
+      margin-left: 5px
 
 .admin_activities.associated_ingredients
   .inputs
