crap, gotta redo some stuff to handle dynamic number of steps

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -286,12 +286,18 @@ body.admin_namespace
 
 
 .filepicker-group
+  margin-bottom: 5px
+
   .filepicker-preview
     margin-bottom: 5px
+
+
+li
   .fpsubgroup
     margin-left: 20%
     button
       margin-left: 5px
+
 
 .admin_activities.associated_ingredients
   .inputs
