--- a/app/views/admin/activities/_step_form.html.haml
+++ b/app/views/admin/activities/_step_form.html.haml
@@ -30,8 +30,8 @@
         %a{data: {toggle: :pill, target: "#media-tabs-#{id} .audio-tab"}} Audio
     .tab-content.media-tabs{id: "media-tabs-#{id}"}
       .tab-pane.active.image-tab
-        = text_field_tag "#{field_name_prefix}[image_id]", image_id, placeholder: 'Image file name'
-        = text_area_tag "#{field_name_prefix}[image_description]", image_description, rows: 5, placeholder: "Image description"
+        = render 'filepicker_group', param: "#{field_name_prefix}[image_id]", value: image_id
+        = text_area_tag "#{field_name_prefix}[image_description]", image_description, rows: 3, placeholder: "Image description"
       .tab-pane.video-tab
         = text_field_tag "#{field_name_prefix}[youtube_id]", youtube_id, placeholder: 'YouTube ID'
       .tab-pane.audio-tab
