need to switch to fpfile in db

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -288,12 +288,28 @@ body.admin_namespace
 .filepicker-group
   margin-bottom: 5px
 
+  .filepicker-preview-group
+
+    .remove-filepicker-image
+      padding-left: 2px
+      display: inline-block
+      vertical-align: bottom
+      cursor: pointer
+
   .filepicker-preview
     margin-bottom: 5px
 
+  .filepicker-subgroup
+    .btn-small
+      box-sizing: border-box
+      padding: 3px 8px
+      border: 2px outset buttonface
+      margin-top: 2px
+      display: inline-block
+      cursor: pointer
 
 li
-  .fpsubgroup
+  .filepicker-subgroup
     margin-left: 20%
     button
       margin-left: 5px
