Add cursor: move

--- a/app/assets/stylesheets/admin/_order_sort_question.css.sass
+++ b/app/assets/stylesheets/admin/_order_sort_question.css.sass
@@ -20,6 +20,7 @@
         padding: 10px
         border: 1px dashed #000
         margin-bottom: 5px
+        cursor: move
 
   .solution.dirty
     background-color: #fbf6be
