--- a/app/views/shared/_media_centered.html.haml
+++ b/app/views/shared/_media_centered.html.haml
@@ -4,9 +4,9 @@
     .media-centered-overlay
     - if media.featured_image
       -if size == 'small'
-        = image_tag filepicker_slider_image(media.featured_image)
+        = image_tag filepicker_slider_image(media.featured_image), alt: media.title, title: media.title
       -else
-        = image_tag filepicker_gallery_image(media.featured_image)
+        = image_tag filepicker_gallery_image(media.featured_image), alt: media.title, title: media.title
     - else
       = image_tag '/assets/missing.png'
     .title-block
