Added add/remove solution UI.

--- a/app/assets/stylesheets/admin/_order_sort_question.css.sass
+++ b/app/assets/stylesheets/admin/_order_sort_question.css.sass
@@ -6,6 +6,12 @@
     padding: 10px 25px
     margin-right: 10px
 
+    a.remove
+      color: #f00
+      font-style: italic
+      display: block
+      margin-top: 20px
+
     .edited
       display: none
       color: #f00
