--- a/app/views/admin/order_sort_questions/_edit.html.haml
+++ b/app/views/admin/order_sort_questions/_edit.html.haml
@@ -15,7 +15,9 @@
   %h2 Solutions
   %p
     You can re-order each solution item by drag-and-drop.
-
+  
+  = link_to 'Add New Solution', '#', id: 'add-solution'
+  
   #solutions-list.clearfix
 
   = f.actions do
