correct legacy support

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -298,6 +298,7 @@ body.admin_namespace
 
   .filepicker-preview
     margin-bottom: 5px
+    max-width: 200px
 
   .filepicker-subgroup
     .btn-small
