--- a/app/views/admin/activities/_filepicker_group.html.haml
+++ b/app/views/admin/activities/_filepicker_group.html.haml
@@ -3,7 +3,7 @@
     = label_tag '', label_text, class: "label"
   = hidden_field_tag param, value, class: "filepicker-real-file"
   .filepicker-preview-group
-    = image_tag "", class: "filepicker-preview"
+    = image_tag '/assets/missing.png', class: "filepicker-preview"
     .btn-small.remove-filepicker-image
       %i.icon-remove
   .filepicker-subgroup
