Add button text.

--- a/app/views/admin/order_sort_questions/_edit.html.haml
+++ b/app/views/admin/order_sort_questions/_edit.html.haml
@@ -21,7 +21,7 @@
   #solutions-list.clearfix
 
   = f.actions do
-    = f.action :submit, label: 'Save Question'
+    = f.action :submit, label: 'Save Question + Solutions'
 
 #image-uploader
   #image-list
