--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -276,6 +276,9 @@ h1, h2, h3, h4
     width: 100%
     float: left
     padding: 10px 0px
+    border: 1px solid $offwhite
+    border-bottom: 1px solid $light-gray
+    @include boxsizing
     .step-element
       float: left
       @include boxsizing
