--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -846,7 +846,7 @@ h1, h2, h3, h4
   // background: -webkit-radial-gradient(50% 0%, closest-corner, rgba(0,0,0,.2), rgba(0,0,0,0))
   &:before
     content: ''
-    box-shadow: 0 0 15px black
+    box-shadow: 0 0 15px gray
     border-radius: 100px / 10px
     position: absolute
     z-index: -1
@@ -865,18 +865,37 @@ h1, h2, h3, h4
 
 .scroll-overlay-bottom
   pointer-events: none
-  height: 120px
+  height: 20px
+  margin-bottom: -20px
   width: 100%
   position: absolute
   bottom: 0px
   display: none
-  background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%) /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1))) /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%) /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%) /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%) /* IE10+ */
-  background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%) /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ) /* IE6-9 */
+  // background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%) /* FF3.6+ */
+  // background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1))) /* Chrome,Safari4+ */
+  // background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%) /* Chrome10+,Safari5.1+ */
+  // background: -o-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%) /* Opera 11.10+ */
+  // background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%) /* IE10+ */
+  // background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%) /* W3C */
+  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ) /* IE6-9 */
+  &:before
+    content: ''
+    box-shadow: 0 0 15px gray
+    border-radius: 100px / 10px
+    position: absolute
+    z-index: -1
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0%
+  &:after
+    content: ''
+    position: absolute
+    top: 0
+    left: -10px
+    right: 0
+    bottom: 0
+    background: white
 
 // BELOW ARE RESPONSIVE STYLES //
 
