--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -848,7 +848,7 @@ h1, h2, h3, h4
     border-radius: 100px / 10px
     position: absolute
     z-index: -1
-    top: 0
+    top: 8px
     bottom: 0
     left: 0
     right: 0%
@@ -883,7 +883,7 @@ h1, h2, h3, h4
     position: absolute
     z-index: -1
     top: 0
-    bottom: 0
+    bottom: 8px
     left: 0
     right: 0%
   &:after
