--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -420,7 +420,8 @@ h1, h2, h3, h4
 //////////
 
 .carousel-scroll
-  overflow: auto
+  overflow-x: auto
+  overflow-y: hidden
   -webkit-overflow-scrolling: touch
   .carousel-scroll-inner
     height: 180px
