horizontal scroll shadow

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -72,12 +72,15 @@
   .row
     .span12
       %h3 Techniques
-      .carousel-scroll#technique-carousel.scroll-shadow-horizontal
-        .carousel-scroll-inner.scroll-shadow-content
-          - @techniques.each_with_index do |technique,index|
-            .item
-              = link_to activity_path(technique) do
-                = render 'shared/media_centered', media: technique, size: 'small'
+      .scroll-shadow-wrapper
+        .carousel-scroll#technique-carousel.scroll-shadow-horizontal
+          .carousel-scroll-inner.scroll-shadow-content
+            - @techniques.each_with_index do |technique,index|
+              .item
+                = link_to activity_path(technique) do
+                  = render 'shared/media_centered', media: technique, size: 'small'
+        .scroll-overlay-left
+        .scroll-overlay-right
       %h3 Recipes
       .carousel-scroll#related-carousel
         .carousel-scroll-inner
