--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -82,13 +82,15 @@
         .scroll-overlay-left
         .scroll-overlay-right
       %h3 Recipes
-      .carousel-scroll#related-carousel
-        .carousel-scroll-inner
-          - @recipes.each_with_index do |recipe,index|
-            .item
-              = link_to activity_path(recipe) do
-                = render 'shared/media_centered', media: recipe, size: 'small'
-
+      .scroll-shadow-wrapper
+        .carousel-scroll#related-carousel.scroll-shadow-horizontal
+          .carousel-scroll-inner.scroll-shadow-content
+            - @recipes.each_with_index do |recipe,index|
+              .item
+                = link_to activity_path(recipe) do
+                  = render 'shared/media_centered', media: recipe, size: 'small'
+        .scroll-overlay-left
+        .scroll-overlay-right
 
 
   - if @course
