activity sliders background

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -46,6 +46,14 @@ $offwhite: #F2F2F2
   margin-top: 70px
   margin-bottom: 60px
 
+#slider-container
+  background: $offwhite
+
+#technique-carousel, #related-carousel
+  .scroll-overlay-left, .scroll-overlay-right
+    &:after
+      background: $offwhite
+
 /* Bootstrap Overrides */
 textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input
   height: inherit
