--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -48,6 +48,8 @@ $offwhite: #F2F2F2
 
 #slider-container
   background: $offwhite
+  .row
+    margin-left: 0px
 
 #technique-carousel, #related-carousel
   .scroll-overlay-left, .scroll-overlay-right
@@ -1047,6 +1049,10 @@ h1, h2, h3, h4
   .media-centered-medium
     height: inherit
 
+  #slider-container
+    margin: 0px -20px
+    padding: 0px 20px
+    
   #footer
     margin: 0px -20px
     padding: 0px 20px
