scroll shadow horizontal tweaks

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -917,12 +917,12 @@ h1, h2, h3, h4
   background: white
   &:before
     content: ''
-    box-shadow: 0 0 15px gray
+    box-shadow: 0 0 15px black
     border-radius: 100px / 10px
     position: absolute
-    top: 0px
-    bottom: 0
-    left: 15px
+    top: 5px
+    bottom: 5px
+    left: 17px
     right: 0px
   &:after
     content: ''
@@ -944,13 +944,13 @@ h1, h2, h3, h4
   display: none
   &:before
     content: ''
-    box-shadow: 0 0 15px gray
+    box-shadow: 0 0 15px black
     border-radius: 100px / 10px
     position: absolute
-    top: 0
-    bottom: 0px
+    top: 5px
+    bottom: 5px
     left: 0
-    right: 15px
+    right: 17px
   &:after
     content: ''
     position: absolute
@@ -1052,7 +1052,7 @@ h1, h2, h3, h4
   #slider-container
     margin: 0px -20px
     padding: 0px 20px
-    
+
   #footer
     margin: 0px -20px
     padding: 0px 20px
