--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -42,13 +42,11 @@
                 %div
                   = link_to activity_path(recipe) do
                     = render 'shared/media_centered', media: recipe, size: 'medium'
-          .vertical-slider-2.scrollfinity.only-non-touch
+          .vertical-slider-2.only-non-touch
             - @recipes.each do |recipe|
-              %div.scrollfinity-item
+              %div
                 = link_to activity_path(recipe) do
                   = render 'shared/media_centered', media: recipe, size: 'medium'
-          .btn.btn-gray.btn-block.scrollfinity-down.only-non-touch
-            %icon.icon-angle-down
       .span4
         %h4.text-center
           = link_to 'Techniques', techniques_path, class: 'black-link'
@@ -59,13 +57,11 @@
                 %div
                   = link_to activity_path(technique) do
                     = render 'shared/media_centered', media: technique, size: 'medium'
-          .vertical-slider-2.scrollfinity.only-non-touch
+          .vertical-slider-2.only-non-touch
             - @techniques.each do |technique|
-              %div.scrollfinity-item
+              %div
                 = link_to activity_path(technique) do
                   = render 'shared/media_centered', media: technique, size: 'medium'
-          .btn.btn-gray.btn-block.scrollfinity-down.only-non-touch
-            %icon.icon-angle-down
       .span4
         %h4.text-center
           = link_to 'Knowledge', sciences_path, class: 'black-link'
@@ -76,13 +72,11 @@
                 %div
                   = link_to activity_path(science) do
                     = render 'shared/media_centered', media: science, size: 'medium'
-          .vertical-slider-2.scrollfinity.only-non-touch
+          .vertical-slider-2.only-non-touch
             - @sciences.each do |science|
-              %div.scrollfinity-item
+              %div
                 = link_to activity_path(science) do
                   = render 'shared/media_centered', media: science, size: 'medium'
-          .btn.btn-gray.btn-block.scrollfinity-down.only-non-touch
-            %icon.icon-angle-down
 
 .row.section
   .span12
