--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -15,20 +15,6 @@
           - @heroes.each_with_index do |hero, index|
             .swipe-indicator-btn.hero-indicator-btn{class: "#{'indicator-active' if index == 0}", id: "hero-swipe-indicator-#{index}", data: {target: '#swiper', :'slide-to-index' => index}}
 
-/ .row
-/   .span12
-/     .swipe#swiper
-/       .swipe-wrap
-/         - @recipes.each_slice(3).with_index do |slice,index|
-/           %div
-/             - slice.each do |recipe|
-/               .item.item-medium
-/                 = link_to activity_path(recipe) do
-/                   = render 'shared/media_centered', media: recipe
-/       .swipe-indicators#content-indicators
-/         - @recipes.each_slice(3).with_index do |slice,index|
-/           .swipe-indicator-btn.content-indicator-btn{class: "#{'indicator-active' if index == 0}", id: "swipe-indicator-#{index}", data: {target: '#swiper', :'slide-to-index' => index}}
-
 .row
   .span12
     .row
@@ -36,47 +22,32 @@
         %h4.text-center 
           = link_to 'Recipes', recipe_gallery_index_path, class: 'black-link'
         - cache @recipes do
-          .swipe#recipe-swiper.only-touch
+          .swipe#recipe-swiper
             .swipe-wrap
               - @recipes.each do |recipe|
                 %div
                   = link_to activity_path(recipe) do
                     = render 'shared/media_centered', media: recipe, size: 'medium'
-          .vertical-slider-2.only-non-touch
-            - @recipes.each do |recipe|
-              %div
-                = link_to activity_path(recipe) do
-                  = render 'shared/media_centered', media: recipe, size: 'medium'
       .span4
         %h4.text-center
           = link_to 'Techniques', techniques_path, class: 'black-link'
         - cache @techniques do
-          .swipe#technique-swiper.only-touch
+          .swipe#technique-swiper
             .swipe-wrap
               - @techniques.each do |technique|
                 %div
                   = link_to activity_path(technique) do
                     = render 'shared/media_centered', media: technique, size: 'medium'
-          .vertical-slider-2.only-non-touch
-            - @techniques.each do |technique|
-              %div
-                = link_to activity_path(technique) do
-                  = render 'shared/media_centered', media: technique, size: 'medium'
       .span4
         %h4.text-center
           = link_to 'Knowledge', sciences_path, class: 'black-link'
         - cache @sciences do
-          .swipe#knowledge-swiper.only-touch
+          .swipe#knowledge-swiper
             .swipe-wrap
               - @sciences.each do |science|
                 %div
                   = link_to activity_path(science) do
                     = render 'shared/media_centered', media: science, size: 'medium'
-          .vertical-slider-2.only-non-touch
-            - @sciences.each do |science|
-              %div
-                = link_to activity_path(science) do
-                  = render 'shared/media_centered', media: science, size: 'medium'
 
 .row.section
   .span12
