--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1047,6 +1047,8 @@ h1, h2, h3, h4
 
   .media-centered-medium
     height: inherit
+    img
+      width: 100%
 
   #slider-container
     margin: 0px -20px
