--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -802,6 +802,8 @@ h1, h2, h3, h4
 /* Scroll Shadow */
 .scroll-shadow-wrapper
   position: relative
+  height: 180px
+  overflow: hidden
 
 .scroll-overlay-top
   pointer-events: none
