--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -69,29 +69,15 @@
                 %cite
                   Grace
 
-- content_for :sliders do
+- content_for :bottom do
   .row
     .span12
       %h3 Techniques
-      .scroll-shadow-wrapper#technique-carousel
-        .carousel-scroll.scroll-shadow-horizontal
-          .carousel-scroll-inner.scroll-shadow-content
-            - @techniques.each_with_index do |technique,index|
-              .item
-                = link_to activity_path(technique) do
-                  = render 'shared/media_centered', media: technique, size: 'small'
-        .scroll-overlay-left
-        .scroll-overlay-right
+      #technique-carousel
+        = render 'shared/horizontal_scroller', items: @techniques
       %h3 Recipes
-      .scroll-shadow-wrapper#related-carousel
-        .carousel-scroll.scroll-shadow-horizontal
-          .carousel-scroll-inner.scroll-shadow-content
-            - @recipes.each_with_index do |recipe,index|
-              .item
-                = link_to activity_path(recipe) do
-                  = render 'shared/media_centered', media: recipe, size: 'small'
-        .scroll-overlay-left
-        .scroll-overlay-right
+      #related-carousel
+        = render 'shared/horizontal_scroller', items: @recipes
 
   .row
     .span12
