--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -36,7 +36,7 @@
     .container-fluid#slider-container
       .row-fluid
         .container
-          = yield :sliders
+          = yield :bottom
 
     = yield :footer
   / = render 'layouts/youtube'
