add user activities

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -31,6 +31,9 @@
           %i.icon-print
         = # TODO Make cooked this button work
         /= render 'cooked_this_button', activity: activity
+        = form_for @user_activity do |f|
+          = f.text_field :activity_id, value: @activity.id
+          = f.submit 'Cooked this'
       .pull-right.display-inline-fix
         = render 'layouts/social_buttons', media_object: @activity
 
