--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -33,7 +33,9 @@
         /= render 'cooked_this_button', activity: activity
         = form_for @user_activity do |f|
           = f.hidden_field :activity_id, value: @activity.id
-          = f.submit 'Cooked this', class: 'btn btn-primary'
+          %button.btn.btn-primary{onclick: 'formSubmit()'}
+            = @activity.users.count
+            Cooked this
       .pull-right.display-inline-fix
         = render 'layouts/social_buttons', media_object: @activity
 
