--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -133,6 +133,9 @@ h1, h2, h3, h4
 
 .section
   margin-top: 20px
+
+.relative
+  position: relative
   
 .two-columns
   column-count: 2
@@ -223,6 +226,23 @@ h1, h2, h3, h4
       display: table-cell
       vertical-align: middle
       height: 100px
+
+.activity-title
+  margin-right: 90px
+
+.activity-action-btn
+  .btn
+    position: absolute
+    width: 80px
+    bottom: 0
+    right: 0
+    padding: 5px
+    margin-bottom: 20px
+    .btn-count
+      font-size: 20px
+      padding-bottom: 2px
+    .btn-text
+      font-size: 12px
 
 #video-ingredient-unit
   min-height: 600px
