--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -13,14 +13,15 @@
     .span6.relative
       %h1.activity-title
         = @activity.title.html_safe
-      .activity-action-btn
-        = form_for @user_activity do |f|
-          = f.hidden_field :activity_id, value: @activity.id
-          %button.btn.btn-primary{onclick: 'formSubmit()'}
-            .btn-count
-              = @activity.users.count
-            .btn-text
-              cooked this
+      - if @activity.is_recipe?
+        .activity-action-btn
+          = form_for @user_activity do |f|
+            = f.hidden_field :activity_id, value: @activity.id
+            %button.btn.btn-primary{onclick: 'formSubmit()'}
+              .btn-count
+                = @activity.users.count
+              .btn-text
+                cooked this
     .span6.noprint
       .pull-left.display-inline-fix
         - if @course
