--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -222,7 +222,7 @@ h1, h2, h3, h4
       width: 50%
       text-transform: uppercase
       .media-header-content
-        text-aigin: left
+        text-align: left
     .media-header-content
       display: table-cell
       vertical-align: middle
